# rust-esp32

./: .gitignore  Cargo.toml  README.md  build.rs  display_symbols.json  display_symbols.txt
.github/workflows/: rust_ci.yml
.zed/: settings.json
src/: button.rs  display.rs  keypad.rs  lib.rs
