[package]
edition = "2021"
name    = "esp32"
version = "0.1.0"

[[bin]]
name = "esp32"
path = "./src/bin/main.rs"

[dependencies]
defmt = "0.3.10"
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "defmt",
  "esp32s3",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32s3",
  "unstable",
] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32s3"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
esp-wifi = { version = "0.13.0", features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "wifi",
] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
heapless = { version = "0.8.0", default-features = false, features = ["ufmt", "serde"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
 serde = {version = "*", default-features = false,features = ["derive"]}
ag-lcd = { version = "0.3.0", features = ["i2c"] }
postcard = { version = "1.1.1", features = ["defmt"] }
ufmt = "0.2.0"
ufloat = "0.1.0"
port-expander = "0.6.4"
mpu6050-dmp = { version = "0.6.0", features = ["async", "defmt-03"] }
[build-dependencies]
serde_json = { version = "*" }
serde = { version = "*", features = ['derive'] }
postcard = { version = "1.1.1", features = ["use-std"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
